# virtuon-assignment

./: README.md
client/: index.html  package-lock.json  package.json
client/src/components/: AnalysisOutput.jsx  ContractFormCard.jsx  DraftReplyOutput.jsx  EmailFormCard.jsx  Header.jsx
client/src/components/common/: Loader.jsx
client/src/hooks/: useEmailAssistant.js
client/src/pages/: Home.jsx
client/src/services/: api.js
client/src/utils/: JsonPretty.jsx
email_assistant/: .env  pyproject.toml  requirements.txt
email_assistant/agents/: analyzer.py  drafter.py
email_assistant/api/: server.py
